--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Play:wght@700&display=swap');
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +6,128 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgba(246, 245, 244, 1.0);
+  background: -webkit-linear-gradient(bottom right, rgba(246, 245, 244, 1.0), rgba(167, 95, 205, 1.0));
+  background: -moz-linear-gradient(bottom right, rgba(246, 245, 244, 1.0), rgba(167, 95, 205, 1.0));
+  background: linear-gradient(to top left, rgba(246, 245, 244, 1.0), rgba(167, 95, 205, 1.0));
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#mainHeading{
+  text-align: center;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+  color:white;
+  font-family: 'Play', sans-serif;
+}
+
+.app{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin:0 auto;
+  justify-content: center;
+}
+
+.news-feed{
+  background-color: rgb(204,204,231);
+  margin: 40px;
+  padding: 20px;
+  box-shadow: 0 3px 10px rgb(0,0,0.2);
+  max-width: 40%;
+  border-radius: 27px;
+}
+
+.news-feed h2{
+  text-align: center;
+}
+
+.news-feed p{
+  margin:1px
+}
+
+.news-feed div{
+  margin:12px;
+}
+
+.news-feed a{
+  text-decoration: none;
+  color:#0a55ff;
+}
+
+.news-feed a:hover{
+  text-decoration:underline;
+}
+
+p#source {
+  font-size: small;
+}
+
+
+
+
+.currency-converter{
+  background-color: rgb(230,223,211);
+  margin: 40px;
+  padding: 20px;
+  box-shadow: 0 3px 10px rgb(0 0 0);
+  text-align: center;
+  max-width: 60%;
+  border-radius: 27px;
+}
+
+.currency-converter button{
+  padding: 7px 17px;
+  margin: 15px;
+  border: 2px solid;
+  border-radius: 14px;
+  background: white;
+  transition-duration: 1000ms;
+}
+
+.currency-converter button:hover{
+  transition-duration: 1000ms;
+  background-color: rgb(252, 72, 72);
+  color:white
+}
+
+.currency-converter #sideColumn{
+  text-align:right
+}
+
+.currency-converter input{
+  text-align: center;
+  margin: 2px 2px;
+  border: none;
+  border-radius: 7px;
+}
+
+.currency-converter input:disabled{
+  color: blue;
+  background-color: white;
+  border: 2px solid;
+}
+
+.currency-converter select{
+  border-radius: 15px;
+  padding: 5px;
+}
+
+
+
+.exchange-rate{
+  background-color: rgb(88, 230, 222);
+  padding: 20px;
+  margin: 18px auto;
+  box-shadow: 0 3px 10px rgb(0 0 0);
+  border-radius: 27px;
+  width: 66%;
+}
+
+.exchange-rate h1,h3{
+  margin: 15px;
 }
