--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,14 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: rgba(246, 245, 244, 1.0);
-  background: -webkit-linear-gradient(bottom right, rgba(246, 245, 244, 1.0), rgba(167, 95, 205, 1.0));
+  /* background: -webkit-linear-gradient(bottom right, rgba(246, 245, 244, 1.0), rgba(167, 95, 205, 1.0));
   background: -moz-linear-gradient(bottom right, rgba(246, 245, 244, 1.0), rgba(167, 95, 205, 1.0));
-  background: linear-gradient(to top left, rgba(246, 245, 244, 1.0), rgba(167, 95, 205, 1.0));
+  background: linear-gradient(to top left, rgba(246, 245, 244, 1.0), rgba(167, 95, 205, 1.0));  */
+  background: url("https://images.unsplash.com/photo-1631603090989-93f9ef6f9d80?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1772&q=80") no-repeat center center/cover;
 }
 
 code {
@@ -158,5 +159,17 @@ tr{
 
 .currency-options{
   margin:10px;
+}
+
+
+
+@media only screen and (max-width: 1000px) {
+  .app{
+    flex-direction: column;
+  }
+
+  .news-feed,.currency-converter{
+    width: 80%;
+  }
 }
 
